data_url/data_url_504.txt
Thank you for providing the docker image and example tutorial.  I am having trouble during the 'make install' step;
i double checked my sample files i generated (from cut and paste).  getting errors like:
/root/.xacc/include/xacc/heterogeneous.hpp:129:57: error: 'any' is not a member of 'std'
129 |       std::initializer_list<std::pair<std::string, std::any>> &&list) {
|                                                         ^~~
/root/.xacc/include/xacc/heterogeneous.hpp:129:57: note: 'std::any' is only available from C++17 onwards
how do i set the compiler in the docker image to the required c++17 ?
ah.. i figured it out...
i had to add the following to /home/dev/test_ir_transformation/src/CMakeLists.txt :
(after the set_target_properties section)
target_compile_features(test-ir-transformation
PUBLIC
cxx_std_17)
then make install worked just fine.  thank you again for making the xacc lib and related materials public!
make install:
Consolidate compiler generated dependencies of target test-ir-transformation
[ 14%] Building CXX object src/CMakeFiles/test-ir-transformation.dir/test_ir_transformation.cpp.o
[ 28%] Building CXX object src/CMakeFiles/test-ir-transformation.dir/test-ir-transformation/cppmicroservices_resources.cpp.o
[ 42%] Building CXX object src/CMakeFiles/test-ir-transformation.dir/test-ir-transformation/cppmicroservices_init.cpp.o
[ 57%] Linking CXX shared library libtest-ir-transformation.so
Appending zipped resources to test-ir-transformation
[100%] Built target test-ir-transformation
Install the project...
-- Install configuration: ""
-- Installing: /root/.xacc/plugins/libtest-ir-transformation.so
-- Set runtime path of "/root/.xacc/plugins/libtest-ir-transformation.so" to "$ORIGIN/../lib"
